# slot_twap_oracle

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
api/: package-lock.json  package.json
api/src/: app.ts  config.ts  db.ts  index.ts  validate.ts  ws.ts
api/src/routes/: health.ts  historical.ts  history.ts  price.ts  twap.ts
bots/updater/: .env.example  RUNBOOK.md  package-lock.json  package.json
bots/updater/config/: pairs.example.json
bots/updater/grafana/: dashboard.json
bots/updater/src/: alerts.ts  config.ts  index.ts  metrics.ts  prometheus.ts  raydium.ts
bots/updater/src/sources/: meteora.ts  orca.ts  raydium.ts
programs/slot_twap_oracle/: Cargo.toml
programs/slot_twap_oracle/src/: events.rs  lib.rs
programs/slot_twap_oracle/src/errors/: mod.rs
programs/slot_twap_oracle/src/instructions/: fund_reward_vault.rs  get_swap.rs  initialize_oracle.rs  initialize_reward_vault.rs  mod.rs  resize_buffer.rs  set_paused.rs  update_price.rs  withdraw_reward_vault.rs
programs/slot_twap_oracle/src/math/: swap.rs
programs/slot_twap_oracle/src/state/: mod.rs  observation.rs  oracle.rs
programs/slot_twap_oracle/src/utils/: ring_buffer.rs
scripts/: e2e-test.ts  index-events.ts  sync-idl.sh  test-all.sh  verify-indexer.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: cli.ts  client.ts  idl.json  idl.ts  index.ts  pda.ts  types.ts
tests/: Cargo.toml
tests/src/: lib.rs
